<resources>
    <string name="app_name">Bluegreen Floor Care</string>

    <string name="home_activity_screen_name">Bluegreen Floor Care</string>
    <string name="review_activity_screen_name">Review Estimate</string>
    <string name="title_activity_feature_services">Featured Services</string>

    <string name="feature_service_title_we_call_wi_come">We Call Wisconsin Home</string>
    <string name="feature_service_sub_title_we_call_wi_come">Southeastern Wisconsin\'s premier cleaning service provider</string>
    <string name="estimate_builder">Estimate Builder</string>
    <string name="estimate_builder_choose_rooms">Choose the rooms you would like cleaned and see your estimate then scheduled your cleaning.</string>
    <string name="create_estimate">Start</string>
    <string name="customer_address_activity_screen_name">Contact Information</string>
    <string name="modify">Modify</string>
    <string name="add_rooms">Add rooms</string>
    <string name="rooms_to_clean">Rooms to clean</string>
    <string name="activity_estimate_builder">Estimate Builder</string>
    <string name="activity_select_services">Select Services</string>
    <string name="service_selectoin">How can we serve you?</string>
    <string name="cleaning_services">Cleaning services</string>
    <string name="services_selection_carpet">Carpet</string>
    <string name="services_selection_upholstery">Upholstery</string>
    <string name="upholstery_to_clean">Upholstery to clean</string>
    <string name="sofa">Sofa</string>
    <string name="chair">Chair</string>
    <string name="done">Done</string>
    <string name="contact_information">Contact Information</string>
    <string name="add_contact_information">Add</string>
    <string name="continue_esitimate">Continue</string>
    <string name="submit_estimate">Submit Estimate"</string>

    <!-- Customer Information -->
    <string name="business_name">Business Name *</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name *</string>
    <string name="customer_contact_reqeust_information">To better serve you, please enter contact information.</string>
    <string name="customer_city">City</string>
    <string name="customer_postal_code">Postal Code</string>
    <string name="customer_address">Address</string>
    <string name="customer_phone_number">Phone Number *</string>
    <string name="customer_save_button">Save</string>
    <string name="error_customer_last_not_valid">Last name is not valid</string>
    <string name="indicates_required_field">* indicates required field</string>

    <string name="error_customer_business_not_valid">First name is not valid.</string>
    <string name="error_customer_first_not_valid">First name is not valid.</string>
    <string name="error_customer_address_not_valid">Address is not valid.</string>
    <string name="error_customer_city_not_valid">City is not valid.</string>
    <string name="error_customer_zip_not_valid">Zip code is not valid.</string>
    <string name="error_customer_phone_not_valid">Valid 7 or 10 digit phone number.</string>
    <string name="customer_information_provice_service">Provide your contact information to better assist in your service.</string>
    <string name="move_furniture">Move Furniture</string>
    <string name="carpet_protector">Carpet Protector</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="x">X</string>
    <string name="price_estimate">price estimate</string>
    <string name="number_of_stairs">Number of stairs</string>


    <string name="build_estimated_price_range">Estimated Price Range</string>
    <string name="estimated_square_carpet_squre_feet">Estimated carpet square feet</string>
    <string name="square_feet">sq feet</string>
    <string name="to_better_assist_in_your_service">To better assist in your service</string>
    <string name="residential">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="by_length_x_width">by Length X Width</string>
    <string name="by_square_feet">by Square Feet</string>
    <string name="estimate_square_feet">Square feet</string>
    <string name="cancel_estimate_question">Are you sure you want to cancel this esitmate</string>
    <string name="cancel_yes">Yes</string>
    <string name="please_select_radio_error">Please select an option</string>
    <string name="success_submit_message">Your esitmate has been submitted.</string>
    <string name="review_estimates">Review Estimates</string>
    <string name="review_estimates_text">Review previously submitted estimates.</string>
    <string name="review_estimates_review">Review</string>
    <string name="estimated_price_range">Estimated Price Range</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="no_estimates_to_show">No estimates to show yet, go ahead and get one.</string>
    <string name="estimated_square_feet">Estimated Square Feet</string>
    <string name="est_sq_ft">est sq ft</string>
    <string name="nbr_rooms">nbr rooms</string>
    <string name="we_will_contact_you_soon">We will contact you soon</string>
    <string name="price_range">price range</string>
    <string name="error_getting_price_factors_text">There was a problem retrieving pricing informatoin, please try again soon</string>
    <string name="error_getting_price">please call for estimate</string>
    <string name="navigation_menu_Home">Home</string>
    <string name="navigation_menu_locations">Our Locations</string>
    <string name="open_navigatoin">Open navigation drawer</string>
    <string name="close_navigation">Close navigation drawer</string>
    <string name="show_locations">Show Locations</string>


    <string name="no_network_connection">No Network Connection Please try again</string>
    <string name="error_getting_locations">There was an technical problem retrieving list of locations, please try again later.</string>
    <string name="get_google_maps">Download Google Maps to view directions.</string>
    <string name="get">GET</string>
    <string name="get_navigation_directions">Get navigation directions</string>
    <string name="cancel_estimate">Cancel Estimate</string>
    <string name="professionals_nthat_ncare">Professionals that care</string>
    <string name="event_button">button</string>
    <string name="event_start_estimate">start estimate</string>
    <string name="event_review_estimate">review estimate</string>
    <string name="no">No</string>
    <string name="living_room">Living Room</string>
    <string name="dining_room">Dining Room</string>
    <string name="den_office">Den/Office</string>
    <string name="bedroom_master">Bedroom - Master</string>
    <string name="bedroom_two">Bedroom #2</string>
    <string name="family_great_room">Family/Great Room</string>
    <string name="recretion_room">Recreation Room</string>
    <string name="stairway_landing">Stairway Landing</string>
    <string name="hallway">Hallway</string>
    <string name="additiona_room1">Additional Room 1</string>
    <string name="additional_room2">Additional Room 2</string>


</resources>
