<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/layout_card_view"

        style="@style/CardView_Common_Elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:showIn="@layout/fragment_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_margin"
                android:layout_marginEnd="@dimen/material_margin"
                android:layout_marginStart="@dimen/material_margin"
                android:layout_marginTop="@dimen/cardview_title_margin"
                android:text="@string/estimate_builder"/>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/material_margin"
                android:layout_marginStart="@dimen/material_margin"
                android:text="@string/estimate_builder_choose_rooms"/>

            <Button
                android:id="@+id/create_estimate"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_estimate"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>