<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/services_selection_cardview"
        style="@style/CardView_Common_Elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:showIn="@layout/fragment_estimate_builder_landing"
        tools:visibility="visible"
        tools:ignore="DuplicateIncludedIds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_margin_half"
                android:layout_marginEnd="@dimen/material_margin"
                android:layout_marginStart="@dimen/material_margin"
                android:layout_marginTop="@dimen/cardview_title_margin"
                android:text="@string/service_selectoin"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/material_margin"
                android:layout_marginStart="@dimen/material_margin"
                android:text="@string/cleaning_services"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/services_selection_carpet_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/material_margin"
                    android:layout_marginStart="@dimen/material_margin"
                    android:text="@string/services_selection_carpet"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/services_selection_upholstery_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/material_margin"
                    android:layout_marginStart="@dimen/material_margin"
                    android:text="@string/services_selection_upholstery"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>