<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/services_selection_cardview"
        style="@style/CardView_Common_Elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:showIn="@layout/fragment_estimate_builder_landing"
        tools:visibility="visible"
        tools:ignore="DuplicateIncludedIds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_margin_half"
                android:layout_marginEnd="@dimen/material_margin"
                android:layout_marginStart="@dimen/material_margin"
                android:layout_marginTop="@dimen/cardview_title_margin"
                android:text="@string/to_better_assist_in_your_service"/>

            <RadioGroup
                android:id="@+id/customer_type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/customer_type_residential"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/material_margin"
                    android:layout_marginStart="@dimen/material_margin"
                    android:text="@string/residential"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/customer_type_commercial"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/material_margin"
                    android:layout_marginStart="@dimen/material_margin"
                    android:text="@string/commercial"/>

            </RadioGroup>

            <TextView
                android:textColor="@color/error_color"
                android:text="@string/please_select_radio_error"
                android:id="@+id/customer_type_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/material_margin"
                android:layout_marginStart="@dimen/material_margin_24"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginBottom="@dimen/material_margin_half"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>