<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/upholstery_cleaning_services_cardview"
        style="@style/CardView_Common_Elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:showIn="@layout/fragment_estimate_builder_landing"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_margin"
                android:layout_marginEnd="@dimen/material_margin"
                android:layout_marginStart="@dimen/material_margin"
                android:layout_marginTop="@dimen/cardview_title_margin"
                android:text="@string/upholstery_to_clean"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/services_selection_sofa_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/material_margin"
                    android:layout_marginStart="@dimen/material_margin"
                    android:text="@string/sofa"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/services_selection_chair_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/material_margin"
                    android:layout_marginStart="@dimen/material_margin"
                    android:text="@string/chair"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>