<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/customer_information_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_sheet_button_height"
        tools:showIn="@layout/fragment_customer_address">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/CardView_Common_Elements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/material_margin"
                        android:layout_marginStart="@dimen/material_margin"
                        android:layout_marginTop="@dimen/material_margin"
                        android:text="@string/customer_contact_reqeust_information"/>

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/material_margin"
                        android:layout_marginStart="@dimen/material_margin"
                        android:layout_marginTop="@dimen/material_margin"
                        android:text="@string/indicates_required_field"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/material_margin"
                        android:layout_marginTop="@dimen/material_margin"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_layout_first_name"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/material_margin"
                                android:layout_weight="1">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/customer_first_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/customer_contact_space"
                                    android:hint="@string/first_name"
                                    android:maxLength="45"
                                    android:lines="1"
                                    android:imeOptions="actionNext"
                                    android:maxLines="1"
                                    android:nextFocusDown="@+id/customer_last_name"/>
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_layout_last_name"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/material_margin"
                                android:layout_weight="1">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@id/customer_last_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:maxLength="45"
                                    android:layout_marginStart="@dimen/customer_contact_space"
                                    android:imeOptions="actionNext"
                                    android:hint="@string/last_name"
                                    android:lines="1"
                                    android:maxLines="1"
                                    android:nextFocusDown="@+id/customer_address"/>
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/material_margin"
                            android:layout_marginStart="@dimen/material_margin">

                            <android.support.design.widget.TextInputEditText
                                android:id="@id/customer_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="120"
                                android:hint="@string/customer_address"
                                android:imeOptions="actionNext"
                                android:lines="1"
                                android:maxLines="1"
                                android:nextFocusDown="@+id/customer_city"/>
                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_customer_city"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/material_margin"
                                android:layout_weight="1">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@id/customer_city"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/material_margin_half"
                                    android:maxLength="30"
                                    android:hint="@string/customer_city"
                                    android:lines="1"
                                    android:maxLines="1"
                                    android:imeOptions="actionNext"
                                    android:nextFocusDown="@+id/customer_state"/>

                            </android.support.design.widget.TextInputLayout>

                            <Spinner
                                android:id="@id/customer_state"
                                style="@style/Base.Widget.AppCompat.Spinner"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="@dimen/material_margin"
                                android:layout_weight="1"
                                android:entries="@array/states_list"
                                android:gravity="bottom"
                                android:nextFocusDown="@+id/customer_postal_code"/>

                        </LinearLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_customer_postal_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/material_margin"
                            android:layout_marginStart="@dimen/material_margin">

                            <android.support.design.widget.TextInputEditText
                                android:id="@id/customer_postal_code"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="9"
                                android:hint="@string/customer_postal_code"
                                android:inputType="number"
                                android:lines="1"
                                android:maxLines="1"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_customer_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/material_margin"
                            android:layout_marginStart="@dimen/material_margin">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/customer_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/customer_phone_number"
                                android:maxLength="10"
                                android:inputType="phone"
                                android:lines="1"
                                android:maxLines="1"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</layout>