<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/estimate_carpet_service_room_cardview"
        style="@style/CardView_Common_Elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carpet_stairway_service_label"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_margin_half"
                android:layout_marginEnd="@dimen/material_margin"
                android:layout_marginStart="@dimen/material_margin"
                android:layout_marginTop="@dimen/cardview_title_margin"
                tools:text="Stairway"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_margin"
                    android:layout_weight=".6">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_number_steps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".06">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/estimate_number_of_steps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/customer_contact_space"
                            android:hint="@string/number_of_stairs"
                            android:textAlignment="center"
                            android:inputType="number"
                            android:lines="1"
                            android:maxLength="4"
                            android:maxLines="1"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/material_margin"
                    android:layout_weight=".6">

                        <TextView

                            android:id="@+id/estimated_price"
                            style="@style/Base.TextAppearance.AppCompat.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center_horizontal|center_vertical"
                            tools:text="$100"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@string/price_estimate"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_list_with_icon_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/estimate_carpet_protector_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/material_margin"/>

                <TextView
                    android:id="@+id/estimate_carpet_protector_label"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_margin_half"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:text="@string/carpet_protector"/>
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


</layout>